# raytracing

./: CMakeLists.txt
src/common/: main.cpp  ray.h  vec3.h
